--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menu_hide_serialnumber"
+        android:checkable="true"
+        android:showAsAction="never"
+        android:title="@string/hide_serialnumber" />
 
     <item
         android:id="@+id/menu_use_shizuku"
